--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Universal Data Tool</title>
+    <style>
+      body {
+        overflow-y: scroll;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
