--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,20 @@
         overflow-y: scroll;
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-130161486-4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
+
+      gtag("config", "UA-130161486-4")
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
