added text import snippet dialog

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <style>
       body {
         overflow-y: hidden;
+        font-family: "Inter";
       }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
