video segmentation support initial

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
         overflow-y: hidden;
         font-family: "Inter";
       }
+      .MuiButton-label {
+        text-transform: none;
+      }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
