--- a/public/legal.html
+++ b/public/legal.html
@@ -10,19 +10,19 @@
   <body>
     <div
       id="header"
-      style="display: inline-flex; justify-content: space-between; width: 100%"
+      style="display: inline-flex; justify-content: space-between; width: 100%;"
     >
-      <img src="./favicon.ico" style="height: 100%" />
-      <div style="display: flex; width: 100%">
-        <a style="margin: auto" href="https://universaldatatool.com">
+      <img src="./favicon.ico" style="height: 100%;" />
+      <div style="display: flex; width: 100%;">
+        <a style="margin: auto;" href="https://universaldatatool.com">
           <h1>Universal Data Tool</h1>
         </a>
       </div>
-      <img src="./favicon.ico" style="height: 100%" />
+      <img src="./favicon.ico" style="height: 100%;" />
     </div>
     <div
       id="terms-and-conditions-wrapper"
-      style="padding-right: 5vw; padding-left: 5vw; padding-top: 2vh"
+      style="padding-right: 5vw; padding-left: 5vw; padding-top: 2vh;"
     >
       <h1>Terms and Conditions of Use</h1>
       <h3>1. Terms</h3>
