don't wait mouffette to respond

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         text-transform: none;
       }
     </style>
-    <script>
+    <script async>
       !(function (a, t) {
         window.moufette = t
         var e = a.getElementsByTagName("script"),
